# nfs-watcher-blob-uploader

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.copilot-tracking/research/: 2026-02-15-fastapi-k8s-web-app-research.md
app/: azure_client.py  config.py  gc.py  main.py  models.py  recovery.py  session.py  telemetry.py  watcher.py  worker.py
docs/planning/: fastapi-k8s-web-app-design-decisions.md  fastapi-k8s-web-app-implementation-details.md  fastapi-k8s-web-app-implementation-plan.md  fastapi-k8s-web-app-issues.md  fastapi-k8s-web-app-questions.md
docs/prds/: fastapi-k8s-web-app.md
k8s/: deployment.yaml  pv-nfs.yaml  pvc-nfs.yaml
test-nfs/: Dockerfile  main.py
